trunk/Archive2/ce/26d15bfe25251a/output
main.cpp:13:44: error: 'B' is not a member of 'A<T>'
     template<class T> friend struct A<T>::B;
                                            ^
